// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`chat-box Chatbox component work 1`] = `
<div
  class="ant-chat-box ant-chat-box-start"
>
  <div
    class="ant-chat-box-content"
  >
    test
  </div>
</div>
`;

exports[`chat-box rtl render component should be rendered correctly in RTL direction 1`] = `
<div
  class="ant-chat-box ant-chat-box-start ant-chat-box-rtl"
>
  <div
    class="ant-chat-box-content"
  >
    test
  </div>
</div>
`;
